--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,8 @@ html, body, app {
     overflow: hidden;
     background-color: snow;
 }
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
